--- a/src/public/less/markdown.less
+++ b/src/public/less/markdown.less
@@ -24,6 +24,10 @@
   a {
     color: #06c;
   }
+  img {
+    display: block;
+    max-width: 100%;
+  }
   pre {
     padding: 7px;
     margin: 4px 0;
@@ -93,5 +97,3 @@
     margin-top: 20px;
   }
 }
-
-
